hphp/test/zend/good/ext/ldap/tests/ldap_error_error.php
<?php
// Too few parameters
var_dump(ldap_error());

// Too many parameters
var_dump(ldap_error(null, null));
?>
===DONE===